--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@ethereumjs/config-tsc",
+  "extends": "@puffscionjs/config-tsc",
   "include": ["src/**/*.ts", "test/**/*.ts"],
   "compilerOptions": {
     "types": ["node"],
