--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@ethereumjs/config-tsc",
+  "extends": "@puffscionjs/config-tsc",
   "compilerOptions": {
     "outDir": "./dist",
     "types": ["node"],
